--- a/page2.html
+++ b/page2.html
@@ -20,11 +20,17 @@
 	<script src="./js/formHandler.js"></script>
     <title>page2</title>
 
-    
-<!-- Analytics -->
- 
-<!-- Analytics END -->
-    
+    <!-- Google Search Console-->
+		<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg" />
+	<!-- Google tag (gtag.js) (Google Analytics) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3N9JZWPY8"></script>
+		<script>
+	  		window.dataLayer = window.dataLayer || [];
+	  		function gtag(){dataLayer.push(arguments);}
+	  		gtag('js', new Date());
+
+	  		gtag('config', 'G-Y3N9JZWPY8');
+		</script>
 </head>
 <body>
 <!-- Principal conteneur -->
