--- a/index.html
+++ b/index.html
@@ -1,37 +1,39 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
+
 <head>
+	<!-- version -->
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
+	<!-- SEO description -->
+	<meta name="description" content="La panthère est une agence de web design et de graphisme basée à Lyon qui propose des services de création de site internet. La meilleure agence de Lyon proposant un consultant seo expert en seo on page. En tant qu’agence de graphisme la panthère est spécialisé en design system.">
+    <!-- link for CSS -->
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
-    
+	<!-- import Javascript -->
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-
-    <title>.</title>
+	<!-- Title tab -->
+	<link rel="shortcut icon" type="image/png" href="img/logo.png">
+    <title>La Panthère, agence web design</title>
 	<!-- Google Search Console-->
-		<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg" />
+	<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg" />
 	<!-- Google tag (gtag.js) (Google Analytics) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3N9JZWPY8"></script>
-		<script>
- 			 window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3N9JZWPY8"></script>
+	<script>
+ 		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
 
-  			gtag('config', 'G-Y3N9JZWPY8');
-		</script>
+  		gtag('config', 'G-Y3N9JZWPY8');
+	</script>
 </head>
+
 <body>
 <!-- Principal conteneur -->
 <div class="page-container">
