--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 	<!-- import Javascript -->
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.min.js" defer></script>
+	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js" defer></script>
+	<script src="./js/formHandler.js" defer></script>
 	<!-- Title tab -->
 	<link rel="shortcut icon" type="image/png" href="img/logo.png">
 	<title>La Panthère, contact</title>
@@ -45,27 +45,11 @@
 				<!-- navbar for mobile -->
 				<section class="navbar-header">
 					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</section>
-				<!-- navbar for desktop and tablet -->
-				<section class="collapse navbar-collapse navbar-1">
-					<ul class="site-navigation nav navbar-nav">
-						<li>
-							<a class="txt--black" href="#portfolio">Portfolio</a>
-						</li>
-						<li>
-							<a class="txt--black" href="contact.html">Nous contacter</a>
-						</li>
-					</ul>
 				</section>
 			</nav>
 		</header>
 		<!-- main -->
-		<main class="main">
+		<main class="main--contact">
 			<!-- aside -->
 			<aside class="">	
 				<h1 class="text-center txt--orange">Parlons web design !</h1>
@@ -75,7 +59,7 @@
 				</p>
 			</aside>
 			<!-- section -->
-			<div class="col-sm-6">
+			<section class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label for="name">Nom</label>
@@ -97,13 +81,13 @@
 						Envoyer
 					</button>
 				</form>
-			</div>
+			</section>
 			<!-- aside -->
-			<div class="col-sm-6">
+			<aside class="col-sm-6">
 				<p>
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi
 				</p>
-			</div>
+			</aside>
 		</main>
 		<!-- Footer -->
 		<footer class="footer">
