--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 			<!-- aside top -->
 			<aside class="aside--top">
 				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
-				<h1 class="text-center txt--orange">Agence La Panthère</h1>
+				<h1 class="text-center txt--orange txt">Agence La Panthère</h1>
 				<button class="btn">
-					<a href="contact.html" class="btn--txt">Contact</a>
+					<a href="contact.html" class="txt--black">Contact</a>
 				</button>
 			</aside>
 			<!-- articles -->
 			<article class="article">
-				<h2 class="text-center">L'agence La Panthère est une agence de web design qui aide<br>les entreprises à devenir attractives et visibles sur Internet.</h2>
+				<h2 class="text-center txt">L'agence La Panthère est une agence de web design qui aide<br>les entreprises à devenir attractives et visibles sur Internet.</h2>
 					<!-- section article -->
 					<section class=" articleTop__container">
 						<div class="col-sm-4">
@@ -105,16 +105,17 @@
 			<!-- article -->
 			<article class="article article--middle">
 				<section class="articleMiddle__container">
-					<h2 class="text-center txt--orange">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
-					<h3 class="text-center txt--orange">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
-					<p class="text-center txt--white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
-						<br><a class="articleMiddle__link" href="contact.html">Contactez notre équipe</a>
-					</p>
+					<h2 class="text-center txt--orange txt">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
+					<h3 class="text-center txt--white txt">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
+					<p class="text-center txt--white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+					<button class="btn">
+						<a href="contact.html" class="txt--black">Contact</a>
+					</button>
 				</section>
 			</article>
 			<!-- article -->
 			<article class="article article--bottom" id="portfolio">
-				<h2 class="text-center">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations de sites web.</h2>
+				<h2 class="text-center txt">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations de sites web.</h2>
 				<!-- section article -->
 				<section class="container__portfolio">
 					<div class="col-sm-6">
@@ -144,30 +145,30 @@
 			</article>
 			<!-- aside bottom -->
 			<aside class="asideBottom">
-				<h2 class="heading-txt--white text-center">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+				<h2 class="heading-txt--white text-center txt">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
 				<button class="btn">
-					<a href="contact.html" class="btn--txt">Contact</a>
+					<a href="contact.html" class="txt--black">Contact</a>
 				</button>
 			</aside>
 		</main>
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="text-center">
-				<h4>Agence La Panthère,<br>agence web basée à Lyon.</h4>
-				<p>2 place Sathonay 69001 Lyon.<br>Ouvert de 9h à 18h, du lundi au vendredi.</p>
+				<h4 class="txt">Agence La Panthère une agence web design basée à Lyon.</h4>
+				<p>2 place Sathonay 69001 Lyon. Ouvert de 9h à 18h, du lundi au vendredi.</p>
 			</div>
 			<div class="footer__container--bottom">
 				<div>
-					<a href="#"><span class="fa fa-twitter icon-md btn--bleuDark"></span></a>
+					<a href="#"><span class="fa fa-twitter fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-facebook icon-md btn--bleuDark"></span></a>
+					<a href="#"><span class="fa fa-facebook fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-dribbble icon-md btn--bleuDark"></span></a>
+					<a href="#"><span class="fa fa-dribbble fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-instagram icon-md btn--bleuDark"></span></a>
+					<a href="#"><span class="fa fa-instagram fa-2x btn--bleuDark"></span></a>
 				</div>
 			</div>
 		</footer>
