nesting terminé, version finale terminée

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 	<!-- Principal conteneur -->
 	<div class="page-container">
 		<!-- header -->
-		<header class="header header--contact">
+		<header class="header">
 			<!-- nav header -->
 			<nav class="navbar">
 				<!-- navbar for mobile -->
@@ -51,7 +51,7 @@
 		<!-- main -->
 		<main class="main--contact">
 			<!-- aside -->
-			<aside>	
+			<aside class="aside__containerContact">	
 				<h1 class="text-center txt--orange">Parlons web design !</h1>
 				<p class="text-center mg-lg txt--orange">
 					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
