--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 	<!-- import Javascript -->
-	<script src="./js/jquery-2.1.0.js" defer></script>
-	<script src="./js/bootstrap.js" defer></script>
-	<script src="./js/blocs.js" defer></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js" defer></script>
+	<script src="./js/gmaps.js"></script>
 	<!-- Title tab -->
 	<link rel="shortcut icon" type="image/png" href="img/logo.png">
     <title>La Panthère, agence web design</title>
