--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="shortcut icon" type="image/png" href="img/logo.png">
     <title>La Panthère, agence web design</title>
 	<!-- Google Search Console-->
-	<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg" />
+	<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg">
 	<!-- Google tag (gtag.js) (Google Analytics) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3N9JZWPY8"></script>
 	<script>
@@ -41,16 +41,16 @@
 			<!-- nav header -->
 			<nav class="navbar">
 				<!-- navbar for mobile -->
-				<section class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-				</section>
+				</div>
 				<!-- navbar for desktop and tablet -->
-				<section class="collapse navbar-collapse navbar-1">
+				<div class="collapse navbar-collapse navbar-1">
 					<ul class="site-navigation nav navbar-nav">
 						<li>
 							<a class="txt--black" href="#portfolio">Portfolio</a>
@@ -59,18 +59,16 @@
 							<a class="txt--black" href="contact.html">Nous contacter</a>
 						</li>
 					</ul>
-				</section>
+				</div>
 			</nav>
 		</header>
 		<!-- main -->
 		<main class="main">
 			<!-- aside top -->
 			<aside class="aside--top">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris">
 				<h1 class="text-center txt--orange txt">Agence La Panthère</h1>
-				<button class="btn">
-					<a href="contact.html" class="txt--black">Contact</a>
-				</button>
+				<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 			</aside>
 			<!-- articles -->
 			<article class="article">
@@ -102,13 +100,11 @@
 			</article>
 			<!-- article -->
 			<article class="article article--middle">
+				<h2 class="text-center txt--orange txt">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
 				<section class="articleMiddle__container">
-					<h2 class="text-center txt--orange txt">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
-					<h3 class="text-center txt--white txt">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
+					<h3 class="text-center txt--orange txt">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
 					<p class="text-center txt--white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
-					<button class="btn">
-						<a href="contact.html" class="txt--black">Contact</a>
-					</button>
+					<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 				</section>
 			</article>
 			<!-- article -->
@@ -117,12 +113,12 @@
 				<!-- section article -->
 				<section class="container__portfolio">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive" /></a>
+						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive"></a>
 						<h3 class="text-center">Refonte d'un site web pour un journal local</h3>
 						<p class="text-center">Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"></a>
 						<h3 class="text-center">Création d'un site web pour photographes</h3>
 						<p class="text-center">Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
 					</div>
@@ -130,12 +126,12 @@
 				<!-- section article -->
 				<section class="container__portfolio">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
 						<h3 class="text-center">Création d'un site internet pour un voyageur</h3>
 						<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
 						<h3 class="text-center">Conception d'un site pour une agence de mariage</h3>
 						<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
 					</div>
@@ -144,9 +140,7 @@
 			<!-- aside bottom -->
 			<aside class="asideBottom">
 				<h2 class="heading-txt--white text-center txt">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
-				<button class="btn">
-					<a href="contact.html" class="txt--black">Contact</a>
-				</button>
+				<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 			</aside>
 		</main>
 		<!-- Footer -->
