--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<link rel="shortcut icon" type="image/png" href="img/logo.png">
 	<title>La Panthère, contact</title>
     <!-- Google Search Console-->
-	<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg" />
+	<meta name="google-site-verification" content="eydBnzUTNRIUixL26Ns2NzByJrldbuZ0525vWO_ewvg">
 	<!-- Google tag (gtag.js) (Google Analytics) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3N9JZWPY8"></script>
 	<script>
@@ -37,35 +37,35 @@
 			<!-- nav header -->
 			<nav class="navbar">
 				<!-- navbar for mobile -->
-				<section class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				</section>
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+				</div>
 			</nav>
 		</header>
 		<!-- main -->
 		<main class="main--contact">
 			<!-- aside -->
 			<aside class="aside__containerContact">	
-				<h1 class="text-center txt--orange">Parlons web design !</h1>
-				<p class="text-center mg-lg txt--orange">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
-					<br>Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-				</p>
+				<h1 class="text-center txt--orange txt">Parlons web design !</h1>
 			</aside>
 			<!-- section -->
 			<section class="col-sm-6 section__formContact">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<h2 class="text-center txt--orange txt">
+					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
+					<br>Parlez-nous de votre projet en complétant le formulaire ci-dessous.
+				</h2>
+				<form novalidate>
 					<div class="form-group">
 						<label for="name" class="txt--white">Nom</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label for="email" class="txt--white">Adresse email</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required>
 					</div>
 					<div class="form-group">
 						<label for="input_504" class="txt--white">Comment nous avez-vous connu ?</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="email" required id="input_504">
 					</div>
 					<div class="form-group">
 						<label for="message" class="txt--white">Décrivez votre projet en ajoutant autant de détails que nécessaire !</label>
