--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 			<nav class="navbar">
 				<!-- navbar for mobile -->
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+					<a class="navbar-brand" href="index.html"><img class="img--header" src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
 				</div>
 			</nav>
 		</header>
