--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<nav class="navbar">
 				<!-- navbar for mobile -->
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40"></a>
+					<a class="navbar-brand" href="index.html"><img class="img--header" src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence"></a>
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -131,7 +131,7 @@
 						<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
+						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
 						<h3 class="text-center">Conception d'un site pour une agence de mariage</h3>
 						<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
 					</div>
