--- a/index.html
+++ b/index.html
@@ -145,10 +145,8 @@
 		</main>
 		<!-- Footer -->
 		<footer class="footer">
-			<div class="text-center">
-				<h4 class="txt">Agence La Panthère une agence web design basée à Lyon.</h4>
-				<p>2 place Sathonay 69001 Lyon. Ouvert de 9h à 18h, du lundi au vendredi.</p>
-			</div>
+			<h2 class="txt text-center">Agence La Panthère une agence web design basée à Lyon.</h2>
+			<p class="text-center">2 place Sathonay 69001 Lyon. Ouvert de 9h à 18h, du lundi au vendredi.</p>
 			<div class="footer__container--bottom">
 				<div>
 					<a href="#"><span class="fa fa-twitter fa-2x btn--bleuDark"></span></a>
