--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 	<!-- Principal conteneur -->
 	<div class="page-container">
 		<!-- header -->
-		<header class="header">
+		<header class="header" role="banner">
 			<!-- nav header -->
-			<nav class="navbar">
+			<nav class="navbar" role="navigation">
 				<!-- navbar for mobile -->
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html"><img class="img--header" src="img/agence-la-panthere-monochrome.svg" alt="logo  de l'agence web design La Panthère, la meilleure agence de creaction de site web basé à Lyon"></a>
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-1" role="button">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -63,55 +63,57 @@
 			</nav>
 		</header>
 		<!-- main -->
-		<main class="main">
+		<main class="main" role="main">
 			<!-- aside top -->
-			<aside class="aside--top">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo  de l'agence web design La Panthère, la meilleure agence de seo, seo expert seo one page basé à Lyon">
+			<aside class="aside--top" role="complimentary">
+				<img src="img/logo.png" class="center-block image-resize-mode" alt="logo  de l'agence web design La Panthère, la meilleure agence de seo, seo expert seo one page basé à Lyon">
 				<h1 class="text-center txt--orange txt">Agence La Panthère</h1>
 				<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 			</aside>
 			<!-- articles -->
-			<article class="article">
+			<article class="article" role="article">
 				<h2 class="text-center txt">L'agence La Panthère est une agence de web design qui aide<br>les entreprises à devenir attractives et visibles sur Internet.</h2>
 					<!-- section article -->
-					<section class=" articleTop__container">
+					<section class=" articleTop__container" role="region">
 						<div class="col-sm-4">
 							<div class="text-center">
 								<span class="et-icon-browser icon"></span>
 							</div>
 							<h3 class="text-center">Web design</h3>
-							<p class="text-center ">Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
+							<p class="txt--justify">Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous</p>
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
 								<span class="et-icon-presentation icon"></span>
 							</div>
 							<h3 class="text-center">Stratégie</h3>
-							<p class="text-center">Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
+							<p class="txt--justify">Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
 						</div>
 						<div class="col-sm-4">
 							<div class="text-center">
 								<span class="et-icon-edit icon"></span>
 							</div>
 							<h3 class="text-center">Illustrations</h3>
-							<p class="text-center">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.</p>
+							<p class="txt--justify">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.</p>
 						</div>
 					</section>
 			</article>
 			<!-- article -->
-			<article class="article article--middle">
-				<h2 class="text-center txt--orange txt">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
-				<section class="articleMiddle__container">
-					<h3 class="text-center txt--orange txt">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
-					<p class="text-center txt--white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+			<article class="article article--middle" role="article">
+				<h2 class="text-center txt--orange txt--bold">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès</h2>
+				<section class="articleMiddle__container" role="region">
+					<h3 class="text-center txt--orange txt--bold">Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients</h3>
+					<p class="txt--justify txt--white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés,
+						<span class="text-center txt--white">seront facilement trouvable sur les moteurs de recherche.</span>
+					</p>
 					<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 				</section>
 			</article>
 			<!-- article -->
-			<article class="article article--bottom" id="portfolio">
-				<h2 class="text-center txt">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations de sites web.</h2>
+			<article class="article article--bottom" id="portfolio" role="article">
+				<h2 class="text-center txt--bold">Nous travaillons avec beaucoup de clients,<br>voici nos réalisations de sites web.</h2>
 				<!-- section article -->
-				<section class="container__portfolio">
+				<section class="container__portfolio" role="region">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Photo d'une refonte de site web, de l'agence web design la panthère ! La meilleure agence web design basé à Lyon" class="img-responsive"></a>
 						<h3 class="text-center">Refonte d'un site web pour un journal local</h3>
@@ -124,41 +126,41 @@
 					</div>
 				</section>
 				<!-- section article -->
-				<section class="container__portfolio">
+				<section class="container__portfolio" role="region">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive" alt="Photo d'une refonte de site web, de l'agence web design la panthère ! La meilleure agence web design basé à Lyon"></a>
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive" alt="Photo d'une refonte de site web, de l'agence web design la panthère ! La meilleure agence web design basé à Lyon"></a>
 						<h3 class="text-center">Création d'un site internet pour un voyageur</h3>
 						<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive" alt="Photo d'une refonte de site web, de l'agence web design la panthère ! La meilleure agence web design basé à Lyon"></a>
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive" alt="Photo d'une refonte de site web, de l'agence web design la panthère ! La meilleure agence web design basé à Lyon"></a>
 						<h3 class="text-center">Conception d'un site pour une agence de mariage</h3>
 						<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
 					</div>
 				</section>
 			</article>
 			<!-- aside bottom -->
-			<aside class="asideBottom">
-				<h2 class="heading-txt--white text-center txt">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
+			<aside class="asideBottom" role="complimentary">
+				<h2 class="heading-txt--white text-center txt--bold">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</h2>
 				<a href="contact.html" class="txt--black btn btn--link">Contact</a>
 			</aside>
 		</main>
 		<!-- Footer -->
-		<footer class="footer">
-			<h2 class="txt text-center">Agence La Panthère une agence web design basée à Lyon.</h2>
+		<footer class="footer" role="contentinfo">
+			<h2 class="txt--bold text-center">Agence La Panthère une agence web design basée à Lyon.</h2>
 			<p class="text-center">2 place Sathonay 69001 Lyon. Ouvert de 9h à 18h, du lundi au vendredi.</p>
 			<div class="footer__container--bottom">
 				<div>
-					<a href="#"><span class="fa fa-twitter fa-2x btn--bleuDark"></span></a>
+					<a href="twitter.com"><span class="fa fa-twitter fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-facebook fa-2x btn--bleuDark"></span></a>
+					<a href="facebook.com"><span class="fa fa-facebook fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-dribbble fa-2x btn--bleuDark"></span></a>
+					<a href="dribbble.com"><span class="fa fa-dribbble fa-2x btn--bleuDark"></span></a>
 				</div>
 				<div>
-					<a href="#"><span class="fa fa-instagram fa-2x btn--bleuDark"></span></a>
+					<a href="instragram.com"><span class="fa fa-instagram fa-2x btn--bleuDark"></span></a>
 				</div>
 			</div>
 		</footer>
